Quick liquid causing crash on scale operation #84649

Closed
opened 2021-01-12 18:38:24 +01:00 by Rob · 12 comments

System Information
Operating system: Win 10
Graphics card: NVidia 1050Ti

Blender Version
Broken: 2.92 Alpha
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes to desktop upon scaling the liquid domain of an object with a "quick liquid" applied

Exact steps for others to reproduce the error

  1. Start new blender scene
  2. Select default cube
  3. Press F3, search for "quick liquid" and apply
  4. Select the liquid domain
  5. Scale by pressing s, x to scale in x-dimension only and moving mouse
  6. blender crashes upon left click to apply scale operation
**System Information** Operating system: Win 10 Graphics card: NVidia 1050Ti **Blender Version** Broken: 2.92 Alpha Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes to desktop upon scaling the liquid domain of an object with a "quick liquid" applied **Exact steps for others to reproduce the error** 1. Start new blender scene 2. Select default cube 3. Press F3, search for "quick liquid" and apply 4. Select the liquid domain 5. Scale by pressing s, x to scale in x-dimension only and moving mouse 6. blender crashes upon left click to apply scale operation
Author

Added subscriber: @Rob-Higgins

Added subscriber: @Rob-Higgins
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this (kind of). If I use the redo-panel after the scale operation and try to change the parameter there, Blender crashes. Tested on 2.92.0 Alpha, branch: master, commit date: 2021-01-12 15:24, hash: 957e292c58.

I can reproduce this (kind of). If I use the redo-panel after the scale operation and try to change the parameter there, Blender crashes. Tested on 2.92.0 Alpha, branch: master, commit date: 2021-01-12 15:24, hash: `957e292c58`.
Member

Debugging the issue, I get a segmentation fault


Thread 17 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffbaacb640 (LWP 101290)]
0x000000001cd0963b in Manta::Error::Error (this=0x60d0006cc520, s="Grid velocity dim [32,16,24] : index 0,4,24 out of bound \nError raised in extern/mantaflow/preprocessed/grid.h:1774") at /.../blender-git/blender/extern/mantaflow/preprocessed/general.h:56
56	    *(volatile int *)(0) = 1;
Debugging the issue, I get a segmentation fault ``` Thread 17 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffbaacb640 (LWP 101290)] 0x000000001cd0963b in Manta::Error::Error (this=0x60d0006cc520, s="Grid velocity dim [32,16,24] : index 0,4,24 out of bound \nError raised in extern/mantaflow/preprocessed/grid.h:1774") at /.../blender-git/blender/extern/mantaflow/preprocessed/general.h:56 56 *(volatile int *)(0) = 1; ```

Added subscriber: @sebbas

Added subscriber: @sebbas

Can confirm the crash too. It looks like Blender is trying to load the vdb cache of a domain with a different size ..

Can confirm the crash too. It looks like Blender is trying to load the vdb cache of a domain with a different size ..
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

This crash is easy quite easy to reproduce from scratch and can easily happen accidentally. Therefore I change the priority to High.

This crash is easy quite easy to reproduce from scratch and can easily happen accidentally. Therefore I change the priority to High.
Sebastián Barschkis self-assigned this 2021-01-28 17:32:56 +01:00

Fix coming up for this. The issue is due to the change from dense to sparse grid caching.

Fix coming up for this. The issue is due to the change from dense to sparse grid caching.

This issue was referenced by 8c36f6becf

This issue was referenced by 8c36f6becff2e53e8d545c4c82f3334588140c8f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:14:53 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84649
No description provided.